--- a/preface/abstract.tex
+++ b/preface/abstract.tex
@@ -24,7 +24,7 @@ Es werden zwei verschiedene Ansätze präsentiert.
 Der erste Ansatz trainiert ein Netzwerk in diskreten Zeitschritten und wandelt danach das trainierte Netzwerk in ein Spiking Netzwerk um.
 Der zweite Ansatz trainiert direkt ein Spiking Netzwerk mit einer angepassten Version der "Spike-Time dependent plasticity" Lern-Regel mit Parameter-Synchronization.
 Die Ansätze werden auf verschiedenen diskreten und Event-basierten Datensätzen evaluiert.
-Beide Ansätze erreichen auf den verschiedenen Datensätzen eine hohe Klassifikationsgenauigkeit ohne die zugrunde liegenden Lern-Regel zu verändern, was auf einen adaptionsfähig Feature-Extraktions Algorithmus schließen lässt.
+Beide Ansätze erreichen auf den verschiedenen Datensätzen eine hohe Klassifikationsgenauigkeit ohne die zugrunde liegende Lern-Regel zu verändern, was auf einen adaptionsfähigen Feature-Extraktions Algorithmus schließen lässt.
 Der Vergleich der beiden Ansätze legt nahe, dass aufgrund von lateral-hemmenden Verbindungen der zweite Ansatz diskriminativere Features extrahieren kann. 
 
         
